# vc-holder

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml  rust-toolchain.toml
.github/workflows/: ci.yaml
examples/crux-wallet/: Cargo.toml  Makefile.toml  README.md
examples/crux-wallet/iOS/: ContentView.swift  WalletApp.swift  project.yml
examples/crux-wallet/iOS/VercreWallet/: ContentView.swift
examples/crux-wallet/iOS/VercreWallet.xcodeproj/: project.pbxproj
examples/crux-wallet/iOS/VercreWallet.xcodeproj/project.xcworkspace/xcuserdata/goldie.xcuserdatad/: UserInterfaceState.xcuserstate
examples/crux-wallet/iOS/VercreWallet/Components/: NavigationBar.swift
examples/crux-wallet/iOS/VercreWallet/Credential/: ClaimList.swift
examples/crux-wallet/iOS/VercreWallet/Crux/: http.swift  key.swift
examples/crux-wallet/iOS/VercreWallet/Issuance/: IssuanceOffer.swift  IssuancePin.swift  IssuanceScan.swift
examples/crux-wallet/iOS/VercreWallet/Presentation/: PresentationRequest.swift  PresentationScan.swift  PresentationSuccess.swift
examples/crux-wallet/iOS/Wallet/: Info.plist
examples/crux-wallet/iOS/Wallet.xcodeproj/: project.pbxproj
examples/crux-wallet/iOS/Wallet.xcodeproj/project.xcworkspace/xcuserdata/goldie.xcuserdatad/: UserInterfaceState.xcuserstate
examples/crux-wallet/iOS/Wallet.xcodeproj/xcshareddata/xcschemes/: Wallet.xcscheme
examples/crux-wallet/iOS/Wallet.xcodeproj/xcuserdata/goldie.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/crux-wallet/iOS/Wallet/Components/: DetailItem.swift  NavigationBar.swift  QRScanner.swift  RoundedRectLabel.swift
examples/crux-wallet/iOS/Wallet/Credential/: Background.swift  ClaimList.swift  CredentialCard.swift  CredentialDetailView.swift  CredentialList.swift  Logo.swift
examples/crux-wallet/iOS/Wallet/Crux/: core.swift  http.swift  key.swift  kv.swift  sse.swift  store.swift
examples/crux-wallet/iOS/Wallet/Error/: ErrorDetail.swift
examples/crux-wallet/iOS/Wallet/Issuance/: ClaimTitleItem.swift  ClaimTitleList.swift  IssuanceOffer.swift  IssuancePin.swift  IssuanceScan.swift
examples/crux-wallet/iOS/Wallet/Presentation/: PresentationRequest.swift  PresentationScan.swift  PresentationSuccess.swift
examples/crux-wallet/iOS/Wallet/Utilities/: Color.swift
examples/crux-wallet/shared/: Cargo.toml  uniffi.toml
examples/crux-wallet/shared/src/: app.rs  did_resolver.rs  lib.rs  model.rs  signer.rs  view.rs
examples/crux-wallet/shared/src/app/: credential.rs  issuance.rs  presentation.rs
examples/crux-wallet/shared/src/capabilities/: key.rs  store.rs
examples/crux-wallet/shared/src/model/: credential.rs  credentials.json  issuance.rs  presentation.rs
examples/crux-wallet/shared/src/view/: credential.rs  issuance.rs  presentation.rs
examples/crux-wallet/shared/src/view/snapshots/: vercre_wallet__view__credential__tests__employee.snap  vercre_wallet__view__credential__tests__offer.snap  wallet__view__credential__tests__developer.snap  wallet__view__credential__tests__developer.snap.new  wallet__view__credential__tests__employee.snap  wallet__view__credential__tests__offer.snap
examples/crux-wallet/shared/wallet.xcodeproj/: project.pbxproj
examples/crux-wallet/shared/wallet.xcodeproj/xcuserdata/goldie.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/crux-wallet/shared_types/: Cargo.toml  build.rs
examples/crux-wallet/shared_types/src/: lib.rs
examples/tauri-wallet/: README.md  package.json  pnpm-lock.yaml
examples/tauri-wallet/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-wallet/src-tauri/src/: app.rs  lib.rs  main.rs  provider.rs
examples/tauri-wallet/src-tauri/src/app/: credential.rs  issuance.rs  presentation.rs
examples/tauri-wallet/src-tauri/src/provider/: issuer_client.rs  store.rs  verifier_client.rs
examples/tauri-wallet/src-tauri/src/view/: credential.rs  issuance.rs  presentation.rs
examples/tauri-wallet/src/Issuance/: Accept.tsx
examples/tauri-wallet/src/Layout/: Footer.tsx
examples/tauri-wallet/src/Splash/: index.tsx
examples/tauri-wallet/src/types/: generated.ts
examples/vcservice/: Cargo.toml  Dockerfile  README.md
examples/vcservice/src/: handler.rs  main.rs
examples/vcservice/src/handler/: assets.rs  issuer.rs  verifier.rs
examples/vcservice/src/provider/: issuer.rs  verifier.rs
examples/vcweb/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml
examples/vcweb/public/: site.webmanifest
examples/vcweb/src/: App.tsx  index.css
examples/vcweb/src/Home/: index.tsx
examples/vcweb/src/Layout/: Footer.tsx  Header.tsx  Logo.tsx
examples/vcweb/src/Offer/: CreateOffer.tsx  OfferJson.tsx  TxCode.tsx  index.tsx
examples/vcweb/src/Request/: CreateRequest.tsx  RequestUrl.tsx  index.tsx
examples/vcweb/src/api/: index.ts
examples/vcweb/src/components/: FullLogo.tsx  QrCode.tsx
examples/vcweb/src/theme/: components.ts  palette.ts  typography.ts
examples/vcweb/src/types/: generated.ts
src/: credential.rs  issuance.rs  lib.rs  presentation.rs  provider.rs
src/snapshots/: credibil_holder__credential__tests__claims_display_default.snap  credibil_holder__credential__tests__claims_display_en-NZ.snap
tests/: issuer_auth.rs  preauth.rs  preauth_deferred.rs  preauth_narrow.rs  presentation.rs  provider.rs  wallet_cred_def.rs  wallet_format.rs  wallet_scope.rs
tests/snapshots/: issuer_auth__credentials.snap  issuer_auth__offered.snap  preauth__credentials.snap  preauth__offered.snap  preauth_deferred__credentials.snap  preauth_deferred__offered.snap  preauth_narrow__credentials.snap  preauth_narrow__offered.snap  presentation__credentials_requested.snap  presentation__credentials_requested_obj.snap  presentation__request_object.snap  presentation__request_object_obj.snap  presentation__response_response.snap  presentation__response_response_obj.snap  wallet_cred_def__credentials.snap  wallet_format__credentials.snap  wallet_scope__credentials.snap
