[workspace]
members = [
    "shared",
    "shared_types",
]
resolver = "1"

[workspace.package]
authors = ["Credibil"]
categories = ["data", "messaging", "didcomm", "identity", "verifiable"]
edition = "2021"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/holder"
rust-version = "1.84"
version = "0.1.0"

[workspace.lints.rust]
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[workspace.dependencies]
anyhow = "1.0.95"
base64ct = {version = "1.6.0", features = ["std"]}
chrono = {version = "0.4.39", features = ["serde"]}
credibil-holder = { path = "../.." }
crux_core = { version = "0.12.0", features = ["typegen"] }
crux_http = { version = "0.11.7", features = ["typegen"] }
crux_kv = { version = "0.6.3", features = ["typegen"] }
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
url = "2.5.4"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
