[package]
name = "vcservice"
description = "Example service with endpoints for issuer and verifier to demonstrate the Credibil example wallets"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
base64ct.workspace = true
bincode = "1.3.3"
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
credibil-vc.workspace = true
dotenv = "0.15.0"
ed25519-dalek.workspace = true
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["alloc"] }
tokio ={ version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
typeshare.workspace = true
url = "2.5.4"
urlencoding.workspace = true
